2006-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScreen.m: ([-visibleFrame]) fix to work when using
	mac style horizontal menu.

2006-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenuView.m: ([-rectOfItemAtIndex:]) Fix bug #15934 by
	removing some bogus code left over from incorporating horizontal
	menu.

2006-02-24  Quentin Mathe <qmathe@club-internet.fr>

	* Source/GSToolbar.m: Fixed mismatched method return type between
	header and implementation.
	* Source/GSToolbarView.m: Updated code to reference some external
	classes lazily with NSClassFromString.
	These fixes avoids some compiler warnings.

2006-02-22 23:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScreen.m: Correction for visibleFrame, spelling of
	NSInterfaceStyle was incorrect.

2006-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrintOperation.m: trap exceptions launching previwer
	* Documentation/GuiUser/DefaultsSuppary.gsdoc: mention GSLPRPrinters
	* Printing/GSLPR/GSLPRPrinter.m: If we set up default printer
	config because there was nothing in the user defaults system, save the
	new config so we don't have to do it again next time.

2006-02-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMatrix.m (-deselectAllCells): Allow empty selection,
	when there are no cells. Patch by Georg Fleischmann <georg@vhf.de>.
	* Source/NSPopupButtonCell.m (-synchronizeTitleAndSelectedItem):
	Don't set selection index to 0, if apopup button doesn't have a
	selection. Patch by Andreas Höschler <ahoesch@smartsoft.de>.

2006-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenuView.m: ([-sizeToFit]) Fix bug #15631
	([-locationForSubmenu:]) for horizontal root menus, make successive
	submenus be positioned with top left corner next to item in parent.
	* Source/NSApplication.m: Pass info in hide/unhide notifications.

2006-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m:
	* Source/NSApplication.m:
	* Source/NSMenuItemCell.m: