@@ -1,3 +1,7 @@
+2006-03-08  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSServicesManager.m: avoid use of deprecated method.
+
 2006-03-05  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSScreen.m: ([-visibleFrame]) fix to work when using
